<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#706D6D"
    >

    <CheckBox
        android:id="@+id/ckBxShowAnswerWithQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/show_question_with_answer"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:useMaterialThemeColors="false" />

    <CheckBox
        android:id="@+id/ckBxNightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="false"
        android:text="@string/night_mode"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBxShowAnswerWithQuestion"
        app:useMaterialThemeColors="false" />

    <CheckBox
        android:id="@+id/ckBxReverseQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/reverse_cards"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBxNightMode"
        app:useMaterialThemeColors="false" />

    <CheckBox
        android:id="@+id/ckBxSwitchEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:clickable="false"
        android:text="@string/switch_direction_only_at_the_end"
        android:textColorHighlight="@color/cardview_dark_background"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBxSwitchPercentage" />

    <CheckBox
        android:id="@+id/ckBxSwitchPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:text="@string/switch_direction_occasionally"
        android:textColorHighlight="@color/cardview_dark_background"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBxReverseQuestion"
        tools:ignore="KeyboardInaccessibleWidget" />

    <CheckBox
        android:id="@+id/ckBxSwitchRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:text="@string/switch_direction_on_random"
        android:textColorHighlight="@color/cardview_dark_background"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBxSwitchEnd"
        tools:ignore="KeyboardInaccessibleWidget" />

    <CheckBox
        android:id="@+id/advancedRepeatLogicIsActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="false"
        android:text="@string/switch_direction_never"
        android:textColorHighlight="@color/cardview_dark_background"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBxSwitchRandom" />
    <CheckBox
        android:id="@+id/switchRandom"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="304dp"
        android:text="Reverse Card Randomly"
        android:textColor="#37383b"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBxReverseQuestion"
        app:useMaterialThemeColors="false" />

    <CheckBox
        android:id="@+id/switchLearned"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="4dp"
        android:text="Reverse Learned Cards"
        android:textColor="#37383b"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchRandom"
        app:useMaterialThemeColors="false" />

    <CheckBox
        android:id="@+id/switchCount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="304dp"
        android:text="Reverse Every 25th Card"
        android:textColor="#37383b"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchLearned"
        app:useMaterialThemeColors="false" />


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/download"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advancedRepeatLogicIsActive" />

    <Button
        android:id="@+id/btnMix"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="288dp"
        android:text="@string/mix_lesson"
        android:textColor="#b3b2b1"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="352dp"
        android:text="@string/reset_lesson"
        android:textColor="#b3b2b1"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnContLesson"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_lesson"
        android:textColor="#b3b2b1"
        android:visibility="invisible"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnChooseLesson"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_lesson"
        android:textColor="#b3b2b1"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtVwHelp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLessonName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:background="#E3ECFA"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:textColor="#202020"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/ckBxShowAnswerWithQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>